[package]
name = "re-schedule"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = "1.3.3"
bzip2 = "0.6.0"
clap = {version="4.5.42", features = ["derive"]}
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
itertools = "0.14.0"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.142"
solana-accounts-db = "2.3.6"
solana-client = "2.3.6"
solana-core = "2.3.6"
solana-message = "2.4.0"
solana-pubkey = "2.4.0"
solana-runtime = "2.3.6"
solana-runtime-transaction = "2.3.6"
solana-sdk = "2.3.1"
solana-svm-transaction = "2.3.6"
solana-transaction-status = "2.3.6"
strum = "0.27.2"
strum_macros = "0.27.2"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
